
PACKAGES
    Fixed: ERR_INCOMPLETE_CHUNKED_ENCODING error due to wrong permissions on nginx fastcgi cache directory (FrontEnd)
    Fixed: White page due to 'net::ERR_INCOMPLETE_CHUNKED_ENCODING' errors (related to #IP-1530) (PhpMyAdmin)
    Updated: PhpMyAdmin version to 4.6.0 - Only for servers with PHP/MySQL >= 5.5 (Package::PhpMyAdmin::Installer)

PLUGINS
    Fixed: Plugin configuration not synced when triggering plugin list update (when a plugin is in error state)
    Fixed: The 'change' action must be automatically triggered on plugin list update, even for plugins with error state
    Fixed: Wrong events triggered when a plugin is being locked/unlocked
    Updated: API version to 1.0.4

SERVERS
    Added: i-MSCP own logrorate configuration file for ProFTPD (xferlog file don't need to be rotated)
    Added: i-MSCP own sysvinit script for ProFTPD - solve #IP-1402
    Changed: setenvif module is now always required ((Httpd servers)
    Fixed: AH01265: attempt to invoke directory as script: /var/www/virtual/<domain.tld>/cgi-bin/
    Fixed: Bad regexp in getTraffic() method leading to unmatching of traffic data (VsFTPd)
    Fixed: Could not build local vsftpd package when gpg has been initialized; .changes file cannot be signed
    Fixed: Courier sysvinit script must not be copied when selected PO server is Dovecot
    Fixed: Disabled mod_tls_memcache.c module to avoid weird notice on restart (ProFTPD)
    Fixed: Don't change user/group and mode when not required (Httpd server implementations)
    Fixed: Enable support for UTF-8 file systems (VsFTPd)
    Fixed: Hide real server identity (ProFTPD)
    Fixed: Invalid version format (non-numeric data) when installing VsFTPd on Debian Stretch (testing)
    Fixed: IP addresses are added multiple time in Apache 00_nameserver.conf file (Httpd servers)
    Fixed: ON|OFF strings not recognized as boolean value in imscp.cnf file (MySQL)
    Fixed: Postfix maps must not be world-readable (Postfix)